--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,9 @@
+0.4 2017-04-01
+    - New Feature: Reset current game
+    - Support for landscape orientation
+    - Support for tablets
+    - Improved cover UI
+
 0.3 2015-01-09
 
     - Vertically align text on game generation view (thanks, Michal Parusinski!)
