--- a/Changelog
+++ b/Changelog
@@ -1,8 +1,8 @@
 0.4 2017-04-01
-    - New Feature: Reset current game
-    - Support for landscape orientation
-    - Support for tablets
-    - Improved cover UI
+    - New Feature: Reset current game (thanks Ingvix!)
+    - Support for landscape orientation (thanks Ingvix!)
+    - Support for tablets (thanks Ingvix!)
+    - Improved cover UI (thanks Ingvix!)
 
 0.3 2015-01-09
 
