--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+0.5 2017-10-31
+    - Improved support for tablets (thanks Ingvix!)
+    - Added optional drag 'n' drog support (thanks Ingvix!)
+
 0.4 2017-04-01
     - New Feature: Reset current game (thanks Ingvix!)
     - Support for landscape orientation (thanks Ingvix!)
